--- a/Quan_ao/Quan_ao/Web.config
+++ b/Quan_ao/Quan_ao/Web.config
@@ -17,7 +17,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
+    <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.codedom>
@@ -26,12 +26,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-	<appSettings>
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-	</appSettings>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+  </appSettings>
   <connectionStrings>
     <add name="Quan_ao_enity" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QS0AGTR\HIEP;initial catalog=cua_hang_so_1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    <add name="Shop_quan_ao" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QS0AGTR\HIEP;initial catalog=_Ban_Quan_ao_demo3;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="Shop_quan_ao" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HIUIT;initial catalog=_Ban_Quan_ao_demo3;integrated security=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
