--- a/Quan_ao/Quan_ao/bin/Quan_ao.dll.config
+++ b/Quan_ao/Quan_ao/bin/Quan_ao.dll.config
@@ -31,7 +31,7 @@
   </appSettings>
   <connectionStrings>
     <add name="Quan_ao_enity" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QS0AGTR\HIEP;initial catalog=cua_hang_so_1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    <add name="Shop_quan_ao" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QS0AGTR\HIEP;initial catalog=_Ban_Quan_ao_demo3;integrated security=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="Shop_quan_ao" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-M5SOOMKO;initial catalog=_Ban_Quan_ao_demo3;integrated security=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
