Hiếu xem chỗ nào còn xấu thì css lại nha

--- a/Quan_ao/Quan_ao/Quan_ao.csproj
+++ b/Quan_ao/Quan_ao/Quan_ao.csproj
@@ -91,8 +91,10 @@
     <Content Include="Content\cssBTrap\bootstrap.min.css" />
     <Content Include="Content\cssBTrap\bootstrap.rtl.css" />
     <Content Include="Content\cssBTrap\bootstrap.rtl.min.css" />
+    <Content Include="Content\CSS\Admin.css" />
     <Content Include="Content\CSS\lightbox.css" />
     <Content Include="Content\CSS\Sales.css" />
+    <Content Include="Content\CSS\single_styles.css" />
     <Content Include="Content\CSS\Web.css" />
     <Content Include="Content\IMG\1.jpg" />
     <Content Include="Content\IMG\1.small.jpg" />
@@ -189,6 +191,22 @@
     <Content Include="View\Admin\XemThongtinSP.aspx" />
     <Content Include="View\Admin\Xem_CTHoaDon.aspx" />
     <Content Include="View\DangNhap.aspx" />
+    <Content Include="View\plugins\easing\easing.js" />
+    <Content Include="View\plugins\font-awesome-4.7.0\css\font-awesome.css" />
+    <Content Include="View\plugins\font-awesome-4.7.0\css\font-awesome.min.css" />
+    <Content Include="View\plugins\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
+    <Content Include="View\plugins\font-awesome-4.7.0\HELP-US-OUT.txt" />
+    <Content Include="View\plugins\Isotope\isotope.pkgd.min.js" />
+    <Content Include="View\plugins\jquery-ui-1.12.1.custom\jquery-ui.css" />
+    <Content Include="View\plugins\jquery-ui-1.12.1.custom\jquery-ui.js" />
+    <Content Include="View\plugins\OwlCarousel2-2.2.1\ajax-loader.gif" />
+    <Content Include="View\plugins\OwlCarousel2-2.2.1\animate.css" />
+    <Content Include="View\plugins\OwlCarousel2-2.2.1\owl.carousel.css" />
+    <Content Include="View\plugins\OwlCarousel2-2.2.1\owl.carousel.js" />
+    <Content Include="View\plugins\OwlCarousel2-2.2.1\owl.theme.default.css" />
+    <Content Include="View\plugins\OwlCarousel2-2.2.1\owl.video.play.png" />
+    <Content Include="View\plugins\themify-icons\fonts\themify.svg" />
+    <Content Include="View\plugins\themify-icons\themify-icons.css" />
     <Content Include="View\User\Gio_hang.aspx" />
     <Content Include="View\User\Home.aspx" />
     <Content Include="View\User\Chi_tiet_SP.aspx" />
@@ -387,6 +405,42 @@
     <None Include="packages.config" />
     <Content Include="View\Admin\Page_Admin.Master" />
     <Content Include="View\User\Page_User.Master" />
+    <Content Include="View\plugins\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
+    <Content Include="View\plugins\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
+    <Content Include="View\plugins\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
+    <Content Include="View\plugins\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
+    <Content Include="View\plugins\font-awesome-4.7.0\fonts\FontAwesome.otf" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\animated.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\bordered-pulled.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\core.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\fixed-width.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\font-awesome.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\icons.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\larger.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\list.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\mixins.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\path.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\rotated-flipped.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\screen-reader.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\stacked.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\less\variables.less" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\font-awesome.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_animated.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_core.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_fixed-width.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_icons.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_larger.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_list.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_mixins.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_path.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_screen-reader.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_stacked.scss" />
+    <Content Include="View\plugins\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="View\plugins\themify-icons\fonts\themify.eot" />
+    <Content Include="View\plugins\themify-icons\fonts\themify.ttf" />
+    <Content Include="View\plugins\themify-icons\fonts\themify.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
